--- a/Mediator/Gemfile
+++ b/Mediator/Gemfile
@@ -8,7 +8,7 @@ gem 'rails', '3.0.0.beta4'
 gem 'sqlite3-ruby', :require => 'sqlite3'
 
 gem 'thin'
-gem 'cramp', :require => 'cramp/controller', :git => 'http://github.com/lifo/cramp.git'
+gem 'cramp', :require => 'cramp/controller', :git => 'http://github.com/maccman/cramp.git'
 
 # Use unicorn as the web server
 # gem 'unicorn'
